<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_files.fragments.OTPVerification">

    <RelativeLayout
        android:id="@+id/topbar_otp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp">

        <ImageView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/pawsitive_png" />

        <ImageView
            android:id="@+id/back_btn_otp"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="-3dp"
            android:src="@drawable/arrow_black" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/topbar_otp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_20sdp">

        <LinearLayout
            android:id="@+id/ll_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:fontFamily="@font/roboto_black"
                android:textSize="@dimen/_19sdp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_your_account_now"
                />

            <TextView
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/text_color1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/we_sent_you_a_code_to_verify_nyour_phone_number"
                />

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->

<!--                <TextView-->
<!--                    android:textSize="@dimen/_12sdp"-->
<!--                    android:textColor="@color/text_color1"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:fontFamily="@font/roboto_medium"-->
<!--                    android:layout_marginBottom="@dimen/_5sdp"-->
<!--                    android:text="@string/sent_to"-->
<!--                    />-->

<!--                <TextView-->
<!--                    android:id="@+id/phone_number_otp"-->
<!--                    android:textSize="@dimen/_12sdp"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:fontFamily="@font/roboto_medium"-->
<!--                    android:layout_marginStart="@dimen/_4sdp"-->
<!--                    android:textColor="@color/text_color1"-->
<!--                    android:text=""-->
<!--                    />-->

<!--            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/otp_1"
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_42sdp"
                    android:gravity="center"
                    android:background="@drawable/background_box_otp"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="@dimen/_22sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/otp_2"
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:gravity="center"
                    android:background="@drawable/background_box_otp"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="@dimen/_22sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/otp_3"
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:gravity="center"
                    android:background="@drawable/background_box_otp"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="@dimen/_22sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/otp_4"
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:gravity="center"
                    android:background="@drawable/background_box_otp"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="@dimen/_22sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/otp_5"
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:gravity="center"
                    android:background="@drawable/background_box_otp"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="@dimen/_22sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/otp_6"
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:gravity="center"
                    android:background="@drawable/background_box_otp"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="@dimen/_22sdp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit_o_t_p"
            android:layout_marginTop="@dimen/_27sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:background="@drawable/gradient_btn"
            android:backgroundTint="@null"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/roboto_bold"
            android:layout_below="@id/ll_otp"
            />

    </RelativeLayout>
    <View
        android:id="@+id/whiteView_log_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A1FFFFFF"
        android:visibility="gone" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/loader_log_in"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:visibility="gone"
        android:src="@drawable/loader" />

</RelativeLayout>